fixing darkbackground z-index

--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -64,7 +64,7 @@
   width: 2000px;
   position: absolute;
   left: -700px;
-  top: -375px;
+  top: -676px;
   opacity: 0.5;
 }
 
